Added html structure min css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="full">
+        <div class="header"></div>
+            <div class="menu">
+                <div class="logo"></div>
+                <div class="links">
+                    <ul>
+                        <li>Header Link One</li>
+                        <li>Header Link Two</li>
+                        <li>Header Link Three</li>
+                    </ul>
+                </div>
+            </div>
+            
+        <div class="section-one"></div>
+        <div class="section-two"></div>
+        <div class="section-three"></div>
+        <div class="footer"></div>
+    </div>
 </body>
 </html>
