--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="full">
-        <div class="header"></div>
+        <div class="header">
             <div class="menu">
-                <div class="logo"></div>
+                <div class="logo"><h1>Header Logo</h1></div>
                 <div class="links">
                     <ul>
                         <li>Header Link One</li>
@@ -19,11 +19,13 @@
                     </ul>
                 </div>
             </div>
-            
+        </div>    
         <div class="section-one"></div>
         <div class="section-two"></div>
         <div class="section-three"></div>
-        <div class="footer"></div>
+        <div class="footer">
+            <p>Olixiro | Landing Page Project by The Odin Project</p>
+        </div>
     </div>
 </body>
 </html>
