Added header content and more structure

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
                     </ul>
                 </div>
             </div>
+            <div class="hero-content">
+                <div class="leftside">
+                    <div><h1>This website is awesome</h1></div>
+                    <div><p>This website has some subtext that goes here under the main title.  It's a smaller font and color is lower contrast</p></div>
+                    <div><button>Sign up</button></div>
+                </div>
+                <div class="hero-img"></div>
+            </div>
+
         </div>    
         <div class="section-one"></div>
         <div class="section-two"></div>
