--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <div class="leftside">
                     <div><h1>This website is awesome</h1></div>
                     <div><p>This website has some subtext that goes here under the main title.  It's a smaller font and color is lower contrast</p></div>
-                    <div><button>Sign up</button></div>
+                    <div><button class="hero-btn">Sign up</button></div>
                 </div>
-                <div class="hero-img"></div>
+                <div class="hero-img"><img src="https://plus.unsplash.com/premium_photo-1674461536241-c951ed7339eb?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="250px"></div>
             </div>
 
         </div>    
