Adjusted sect one structure and naming

--- a/index.html
+++ b/index.html
@@ -29,7 +29,27 @@
             </div>
 
         </div>    
-        <div class="section-one"></div>
+        <div class="section-one">
+            <div class="info"><h1>Some random information.</h1></div>
+            <div class="containers">
+                <div class="card">
+                    <div class="cardbox"></div>
+                    <div class="cardtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="cardbox"></div>
+                    <div class="cardtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="cardbox"></div>
+                    <div class="cardtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="cardbox"></div>
+                    <div class="cardtext">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
         <div class="section-two"></div>
         <div class="section-three"></div>
         <div class="footer">
