--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                 </div>
             </div>
         </div>
-        <div class="section-two"></div>
+        <div class="section-two">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  WHo knows?  All I know is that it looks nice.</div>
+            <div class="quote-credit">-Thor, God of Thunder</div>
+        </div>
         <div class="section-three"></div>
         <div class="footer">
             <p>Olixiro | Landing Page Project by The Odin Project</p>
