--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
             <div class="quote">This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  WHo knows?  All I know is that it looks nice.</div>
             <div class="quote-credit">-Thor, God of Thunder</div>
         </div>
-        <div class="section-three"></div>
+        <div class="section-three">
+            <div class="callbox">
+                <div class="calltext">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="callbtn"><button>Sign up</button></div>
+            </div>
+        </div>
         <div class="footer">
             <p>Olixiro | Landing Page Project by The Odin Project</p>
         </div>
